--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
         android:label="qr_reader"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyDUF0PYfGshd-HIXh6Z2SME0KEO1ULCLLQ"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
